fix path problem

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             return this.origin.code.apply(this, arguments);
           },
           image: function(href, title) {
-            return `<img src="${href}" data-origin="${href}" alt="${title}">`
+            return `<img src="/cnblogs/${href}" data-origin="${href}" alt="${title}">`
           }
         }
       },
